# offer_me

./: .coverage  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  Dockerfile-jenkins  Dockerfile-test  Jenkinsfile  README.md  TODO.txt  db.sqlite3  docker-compose.yml  dockerfile  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_requirements.txt
app/: admin.py  apps.py  decorators.py  urls.py
app/migrations/: 0001_initial.py
app/mixins/: login_required_mixin.py
app/urls/: account_urls.py  base_urls.py  offer_urls.py
app/views/: delete_offer.py  home.py  offer_form.py  offers.py  panel.py  update_offer.py  user_offers.py
apps/authentication/: tests.py  urls.py  views.py
automated_tests/: conftest.py  test_auth.py  test_offers.py  test_pages.py
backend/forms/: add_offer_form.py  login_form.py  register_form.py
core/: asgi.py  settings.py  urls.py
decorators/: decorators.py
forms/: add_offer_form.py  login_form.py  offer_form.py  password_reset_form.py  register_form.py
login_django/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: decorators.py  models.py  tests.py  urls.py  views.py
main_app/class_views/: delete_offer.py  home.py  login.py  offer_form.py  offers.py  panel.py  register.py  update_offer.py  user_offers.py
main_app/migrations/: 0001_initial.py
main_app/templatetags/: custom_tags.py
main_app/views/: delete_offer.py  login.py  offers.py  register.py  (+2 more)
offer_me/: asgi.py  settings.py  urls.py  wsgi.py
tests/: authentication_tests.py  conftest.py  email_tests.py  offers_tests.py
(+51 files in other folders)
